--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
 <html>
+<head>
+    <title> Charles (Teddy) Hoff's CSC 4370 Homepage </title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+<body>
+
+    <h1>Charles (Teddy) Hoff's</h1>
+    <h1>CSC 4370 Homepage</h1>
+
+    <img src="headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
+    <span class="center">Teddy Hoff</span>
+
+    <h5>Links:</h5>
+    <p>
+        <a href="http://www.cs.gsu.edu/">Georgia State University Computer Science Department</a>
+    </p>
+
+</body>
 </html>
