Added table for assignments

--- a/index.html
+++ b/index.html
@@ -9,12 +9,69 @@
     <h1>CSC 4370 Homepage</h1>
 
     <img src="headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
-    <span class="center">Teddy Hoff</span>
-
-    <h5>Links:</h5>
-    <p>
-        <a href="http://www.cs.gsu.edu/">Georgia State University Computer Science Department</a>
-    </p>
+    <span>Teddy Hoff</span>
+    <br>
+    Links:
+    <br>
+    <a href="http://www.cs.gsu.edu/">Georgia State University Computer Science Department</a>
+    <br><br>
+    <table>
+        <tr>
+          <th>Assignment #</th>
+          <th>Name</th> 
+          <th>Link</th> 
+        </tr>
+        <tr>
+          <td>Assignment 2</td>
+          <td>CSS Recipe</td>
+          <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Assignment 3</td>
+            <td>PHP</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Assignment 4</td>
+            <td>PHP & Forms</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Assignment 5</td>
+            <td>JavaScript</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Assignment 6</td>
+            <td>JQuery</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Assignment 7</td>
+            <td>MYSQL + PHP</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Project 1</td>
+            <td>CSS</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Project 2</td>
+            <td>PHP & CSS</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Project 3</td>
+            <td>JavaScript</td>
+            <td>Not yet available</td>
+        </tr>
+        <tr>
+            <td>Project 4</td>
+            <td>Final Project</td>
+            <td>Not yet available</td>
+        </tr>
+      </table>
 
 </body>
 </html>
