--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Charles (Teddy) Hoff's</h1>
     <h1>CSC 4370 Homepage</h1>
 
-    <img src="headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
+    <img src="images/headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
     <span>Teddy Hoff</span>
     <br>
     Links:
@@ -72,6 +72,52 @@
             <td>Not yet available</td>
         </tr>
       </table>
+      <h3>Other Info:</h3>
+
+      <h4>Interests</h4>
+      <ul>
+        <li><a href="https://www.mlb.com/braves">Baseball</a></li>
+        <li><a href="https://www.atlantamagazine.com/50bestrestaurants/">Food</a></li>
+        <li>Music</li>
+        <li>Movies</li>
+      </ul>
+      <h4>Top 5 Movies of 2018</h4>
+      <ol type="1">
+        <li>Annihilation</li>
+        <li>Hereditary</li>
+        <li>First Reformed</li>
+        <li>Roma</li>
+        <li>Shoplifters</li>
+      </ol>
+
+      <h4>Education and Job History</h4>
+      <ul>
+        <li><h5>Education</h5></li>
+            <ul>
+            <li>Druid Hills High School</li>
+            <li>American Military University</li>
+            <li>Georgia State University</li>
+          </ul>
+        <li><h5>Job History</h5></li>
+          <ol type="1">
+            <li>IT Specialist - U.S. Army</li>
+            <li>IT Operations Co-op - GTRI</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h4>Favorite Quote</h4>
+      <div>"I hate when I’m on a flight and I wake up with a water bottle next to me 
+          like oh great now I gotta be responsible for this water bottle." - Kanye West</div>
+        
+      <h4>Other Links</h4>  
+      <a href="https://www.linkedin.com/in/teddyhoff12/">Teddy's LinkdIn</a>
+      <br>
+      <a href="https://github.com/Choff3">Teddy's GitHub</a>
+      <br>
+      <a href="https://www.youtube.com/user/khanacademy">Khan Academy</a>
+      <br>
+      <a href="stylesheet.css" download>CSS Stylesheet Used</a>
 
 </body>
 </html>
