--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
 </head>
 <body>
 
-    <h1>Charles (Teddy) Hoff's</h1>
+    <h1>Charles (<span class="red">Teddy</span>) <span class="red">Hoff</span>'s</h1>
     <h1>CSC 4370 Homepage</h1>
 
-    <img src="images/headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
-    <span>Teddy Hoff</span>
+    <div class="portrait">
+      <img src="images/headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
+      <span class="caption"><span class="red">Teddy Hoff</span></span>
+    </div>
     <br>
+
     Links:
     <br>
-    <a href="http://www.cs.gsu.edu/">Georgia State University Computer Science Department</a>
+    <a href="http://www.cs.gsu.edu/"><span class="red">Georgia State</span> University <span class="red">Computer Science</span>Department</a>
     <br><br>
     <table>
         <tr>
@@ -107,13 +110,13 @@
       </ul>
 
       <h4>Favorite Quote</h4>
-      <div>"I hate when I’m on a flight and I wake up with a water bottle next to me 
+      <div>"I hate when I'm on a flight and I wake up with a water bottle next to me 
           like oh great now I gotta be responsible for this water bottle." - Kanye West</div>
         
       <h4>Other Links</h4>  
-      <a href="https://www.linkedin.com/in/teddyhoff12/">Teddy's LinkdIn</a>
+      <a href="https://www.linkedin.com/in/teddyhoff12/"><span class="red">Teddy</span>'s LinkdIn</a>
       <br>
-      <a href="https://github.com/Choff3">Teddy's GitHub</a>
+      <a href="https://github.com/Choff3"><span class="red">Teddy</span>'s GitHub</a>
       <br>
       <a href="https://www.youtube.com/user/khanacademy">Khan Academy</a>
       <br>
