Trying to fix Safari rendering

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title> Charles (Teddy) Hoff's CSC 4370 Homepage </title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="style/css" href="stylesheet.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 
     Links:
     <br>
-    <a href="http://www.cs.gsu.edu/"><span class="red">Georgia State</span> University <span class="red">Computer Science</span>Department</a>
+    <a href="http://www.cs.gsu.edu/"><span class="red">Georgia State</span> University <span class="red">Computer Science</span> Department</a>
     <br><br>
     <table>
         <tr>
