Changed red css class

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title> Charles (Teddy) Hoff's CSC 4370 Homepage </title>
-    <link rel="stylesheet" type="style/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
