--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="portrait">
       <img src="images/headshot.jpg" alt="Teddy Hoff" class="portrait"></img>
-      <span class="caption"><span class="red">Teddy Hoff</span></span>
+      <span class="caption red">Teddy Hoff</span>
     </div>
     <br>
 
@@ -26,8 +26,8 @@
         </tr>
         <tr>
           <td>Assignment 2</td>
-          <td>CSS Recipe</td>
-          <td>Not yet available</td>
+          <td>CSS Movie Review</td>
+          <td><a href="assignment2\tmnt.html">TMNT - Rancid Tomatoes</a></td>
         </tr>
         <tr>
             <td>Assignment 3</td>
