Both cards flip

--- a/project1/first.html
+++ b/project1/first.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <!-- <div class="flip-card2">
+    <div class="flip-card2">
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <img src="back.png" alt="Avatar" style="width: 150px; height: 230px;">
@@ -31,7 +31,7 @@
               <img src="10H.png" style="width: 150px; height: 230px;">
           </div>
         </div>
-      </div> -->
+      </div>
 
 
 
