Kind of works but is mostly janky

--- a/project1/first.html
+++ b/project1/first.html
@@ -9,7 +9,6 @@
   <div class="draw"><img src="back.png"></img></div>
 
   <div class="drawn"><img src="back.png" style="width: 150px; height: 230px;"></img></div>
-  <!-- <div class="card1"><img src="back.png"></img></div> -->
 
   <div class="flip-card1">
       <div class="flip-card-inner">
@@ -33,7 +32,9 @@
         </div>
       </div>
 
-
+      <div class="casino"><img src="casinoneon.gif"></img></div>
+      <div class="cards"><img src="cards.gif"></img></div>
+      <div class="wood"><img src="wood.jpg"></img></div>
 
 </body>
 </html>
