--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <tr>
             <td>Project 1</td>
             <td>CSS</td>
-            <td>Not yet available</td>
+            <td><a href="project1\first.html">CS Casino</a></td>
         </tr>
         <tr>
             <td>Project 2</td>
