--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <tr>
             <td>Assignment 3</td>
             <td>PHP</td>
-            <td>Not yet available</td>
+            <td><a href="assignment3\assignment3.html">Assignment 3 - PHP</a></td>
         </tr>
         <tr>
             <td>Assignment 4</td>
             <td>PHP & Forms</td>
-            <td>Not yet available</td>
+            <td><a href="assignment4\index.php">NerdLuv</a></td>
         </tr>
         <tr>
             <td>Assignment 5</td>
