--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <tr>
             <td>Project 2</td>
             <td>PHP & CSS</td>
-            <td>Not yet available</td>
+            <td><a href="/project2/">Jeopardy!</a></td>
         </tr>
         <tr>
             <td>Project 3</td>
