--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <tr>
             <td>Assignment 5</td>
             <td>JavaScript</td>
-            <td>Not yet available</td>
+            <td><a href="assignment5\payrollReport.html">Company Payroll Report</a></td>
         </tr>
         <tr>
             <td>Assignment 6</td>
