--- a/assignment5/payrollReport.html
+++ b/assignment5/payrollReport.html
@@ -9,7 +9,7 @@
     <span id="totalPay"></span>
     </h2>
     <br><br><br>
-    <a href="matchGame.html">Assignment 5: Part B</a>
+    <a href="memoryGame.html">Assignment 5: Part B</a>
     <script src='payroll.js'></script>
 </body>
 </html>
