Changed assignments to have indexes

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <tr>
           <td>Assignment 2</td>
           <td>CSS Movie Review</td>
-          <td><a href="assignment2\tmnt.html">TMNT - Rancid Tomatoes</a></td>
+          <td><a href="assignment2\">TMNT - Rancid Tomatoes</a></td>
         </tr>
         <tr>
             <td>Assignment 3</td>
             <td>PHP</td>
-            <td><a href="assignment3\assignment3.html">Assignment 3 - PHP</a></td>
+            <td><a href="assignment3\">Assignment 3 - PHP</a></td>
         </tr>
         <tr>
             <td>Assignment 4</td>
             <td>PHP & Forms</td>
-            <td><a href="assignment4\index.php">NerdLuv</a></td>
+            <td><a href="assignment4\">NerdLuv</a></td>
         </tr>
         <tr>
             <td>Assignment 5</td>
