Added buttons for difficulty

--- a/assignment5/memoryGame.html
+++ b/assignment5/memoryGame.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <p>Memory Game</p>
-    <button id="myBtn1" onclick='newBoard()'>play</button>
+    <button id="myBtn1" onclick='newBoard()'>Easy</button>
+    <button id="myBtn2" onclick='newBoard()'>Medium</button>
+    <button id="myBtn3" onclick='newBoard()'>Hard</button>
     <p id="demo"></p>
     <div id="memory_board"></div>
     <script src='game.js'></script>
