--- a/assignment5/payrollReport.html
+++ b/assignment5/payrollReport.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-    <title>Assignment 5 part A</title>
+    <title>Company Payroll Report</title>
 </head>
 <body>
     <h1>Company Payroll Report</h1>
-    <div id="myDiv"></div>
+    <div id="table"></div>
     <h2>Total Pay:
     <span id="totalPay"></span>
     </h2>
     <br><br><br>
-    <a href="memoryGame.html">Assignment 5: Part B</a>
+    <a href="memoryGame.html">Part B</a>
     <script src='payroll.js'></script>
 </body>
 </html>
