--- a/assignment5/memoryGame.html
+++ b/assignment5/memoryGame.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Assignment 5 part B</title>
+    <title>Memory Game</title>
     <link href="game.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
