--- a/assignment5/memoryGame.html
+++ b/assignment5/memoryGame.html
@@ -13,7 +13,7 @@
     <button id="mediumButton" onclick='newBoard(5000)'>Medium</button>
     <button id="hardButton" onclick='newBoard(3000)'>Hard</button>
     <h2 id="timer"></h2>
-    <div id="memory_board"></div>
+    <div id="board"></div>
     <script src='game.js'></script>
 </body>
 </html>
