--- a/assignment5/memoryGame.html
+++ b/assignment5/memoryGame.html
@@ -9,9 +9,9 @@
     <input type="radio" id="numPics12" name="numPics" value="12" onclick='radioCheck()'> 12 Pictures<br>
     <input type="radio" id="numPics10" name="numPics" value="10" onclick='radioCheck()'> 10 Pictures<br>
     <input type="radio" id="numPics8" name="numPics" value="8" onclick='radioCheck()'> 8 Pictures <br> 
-    <button id="easyButton" onclick='newBoard(8000)'>Easy</button>
-    <button id="mediumButton" onclick='newBoard(5000)'>Medium</button>
-    <button id="hardButton" onclick='newBoard(3000)'>Hard</button>
+    <button id="easyButton" onclick='newGame(8000)'>Easy</button>
+    <button id="mediumButton" onclick='newGame(5000)'>Medium</button>
+    <button id="hardButton" onclick='newGame(3000)'>Hard</button>
     <h2 id="timer"></h2>
     <div id="board"></div>
     <script src='game.js'></script>
