--- a/project3/index.html
+++ b/project3/index.html
@@ -1,3 +1,5 @@
+<!-- I implemented the end of game notification extra feature. -->
+
 <html>
 	<head>
 		<title>Fifteen Puzzle</title>
@@ -7,11 +9,11 @@
 
 	<body>
 		<h1>Fifteen Puzzle</h1>
-		<p class="explanation">
+		<p id='rules'>
 			The goal of the fifteen puzzle is to un-jumble its fifteen squares by repeatedly making moves that slide squares into the empty space.  How quickly can you solve it?
 		</p>
-		<div id="overall">
-			<div id="puzzlearea">
+		<div id="game">
+			<div id="board">
 				<div>1</div>  
 				<div>2</div>  
 				<div>3</div>  
@@ -28,14 +30,10 @@
 				<div>14</div> 
 				<div>15</div>
 			</div>
-			<div id="controls">
-			<button id="shufflebutton">Shuffle</button>
-			</div>
+			<br>
+			<button id="shuffleBtn">Shuffle</button>
 		</div>
-		<p class="explanation">
-			American puzzle author and mathematician Sam Loyd is often falsely credited with creating the puzzle; indeed, Loyd claimed from 1891 until his death in 1911 that he invented it.  The puzzle was actually created around 1874 by Noyes Palmer Chapman, a postmaster in Canastota, New York.
-		</p>
-		<div id="w3c">
+		<div id="validator">
 			<a href="//validator.w3.org/check/referer"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/w3c-xhtml.png" alt="Valid XHTML 1.1" /></a>
 			<a href="//jigsaw.w3.org/css-validator/check/referer"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/w3c-css.png" alt="Valid CSS" /></a>
 			<a href="//webster.cs.washington.edu/jslint/"><img src="//www.cs.washington.edu/education/courses/cse190m/09sp/images/jslint.png" alt="JavaScript Lint" /></a>
