Added project 3 to index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <tr>
             <td>Project 3</td>
             <td>JavaScript</td>
-            <td>Not yet available</td>
+            <td><a href="project3\">Fifteen Puzzle</a></td>
         </tr>
         <tr>
             <td>Project 4</td>
