--- a/index.html
+++ b/index.html
@@ -45,16 +45,6 @@
             <td><a href="assignment5\payrollReport.html">Company Payroll Report</a></td>
         </tr>
         <tr>
-            <td>Assignment 6</td>
-            <td>JQuery</td>
-            <td>Not yet available</td>
-        </tr>
-        <tr>
-            <td>Assignment 7</td>
-            <td>MYSQL + PHP</td>
-            <td>Not yet available</td>
-        </tr>
-        <tr>
             <td>Project 1</td>
             <td>CSS</td>
             <td><a href="project1\">CS Casino</a></td>
@@ -72,7 +62,7 @@
         <tr>
             <td>Project 4</td>
             <td>Final Project</td>
-            <td>Not yet available</td>
+            <td><a href="project4\">GSU Travel Booking</a></td>
         </tr>
       </table>
       <h3>Other Info:</h3>
